# pic-repo

./: README.md
PiPico-projects/FreeRTOS/: CMakeLists.txt
PiPico-projects/FreeRTOS/src/: main.c
PiPico-projects/hello-world/main/: CMakeLists.txt
SweRVolf-projects/simple-assembly/: platformio.ini
SweRVolf-projects/simple-assembly/src/: AL_Operations.S
SweRVolf-projects/zephyr/hello_world/: App.hex
SweRVolf-projects/zephyr/philosophers/: App.hex
